--- a/src/main/resources/gwt/material/design/addins/client/combobox/resources/css/select2.css
+++ b/src/main/resources/gwt/material/design/addins/client/combobox/resources/css/select2.css
@@ -191,33 +191,8 @@
     color: #ccc
 }
 
-.select2-container--default .select2-selection--single .select2-selection__arrow {
-    position: absolute;
-    top: 1px;
-    right: 1px;
-    width: 20px
-}
-
-.select2-container--default .select2-selection--single .select2-selection__arrow b {
-    border-color: #888 transparent transparent;
-    border-style: solid;
-    border-width: 7px 3px 0;
-    height: 0;
-    left: 50%;
-    margin-left: 2px;
-    margin-top: -2px;
-    position: absolute;
-    top: 50%;
-    width: 0
-}
-
 .select2-container--default[dir=rtl] .select2-selection--single .select2-selection__clear {
     float: left
-}
-
-.select2-container--default[dir=rtl] .select2-selection--single .select2-selection__arrow {
-    left: 1px;
-    right: auto
 }
 
 .select2-container--default.select2-container--disabled .select2-selection--single {
@@ -231,12 +206,6 @@
 
 .select2-container--disabled .select2-selection__rendered {
     color: rgba(0, 0, 0, .4) !important
-}
-
-.select2-container--default.select2-container--open .select2-selection--single .select2-selection__arrow b {
-    border-color: transparent transparent #000;
-    border-width: 7px 4px;
-    top: 30%
 }
 
 .select2-container--default .select2-selection--multiple {
@@ -305,10 +274,6 @@
     -moz-user-select: none;
     -ms-user-select: none;
     border-bottom: 1px solid rgba(0, 0, 0, .14)
-}
-
-.select2-container--default.select2-container--disabled .select2-selection--single .select2-selection__arrow b {
-    border-color: #b9b9b9 transparent transparent
 }
 
 .select2-container--default.select2-container--open.select2-container--above .select2-selection--multiple, .select2-container--default.select2-container--open.select2-container--above .select2-selection--single {
@@ -416,6 +381,63 @@
     color: #ccc
 }
 
+/** Arrow **/
+/** Header **/
+header nav .select2-container--default .select2-selection--single .select2-selection__arrow b {
+    border-color: transparent transparent rgba(255,255,255,0.5) !important;
+}
+
+/** Default **/
+.combobox .select2-container--open .select2-selection__arrow b,
+.combobox .select2-selection__arrow b {
+    content: "";
+    position: absolute;
+    right: 8px;
+    bottom: 12px;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 0 12px 12px;
+    border-color: transparent transparent #9c9c9c transparent !important;
+}
+
+.combobox.outlined .select2-container--open .select2-selection__arrow b,
+.combobox.outlined .select2-selection__arrow b {
+    bottom: 17px;
+}
+
+.combobox .select2-container--disabled .select2-selection__arrow b {
+    border-color: transparent transparent #c7c7c7 transparent !important;
+}
+
+.select2-container--classic[dir=rtl] .select2-selection--single .select2-selection__arrow {
+    border: none;
+    border-right: 1px solid #aaa;
+    border-radius: 4px 0 0 4px;
+    left: 1px;
+    right: auto
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow {
+    height: 46px
+}
+
+.read-only.combobox .select2-selection__arrow {
+    display: none !important
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow {
+    position: absolute;
+    top: 1px;
+    right: 1px;
+    width: 20px
+}
+
+.select2-container--default[dir=rtl] .select2-selection--single .select2-selection__arrow {
+    left: 1px;
+    right: auto
+}
+
 .select2-container--classic .select2-selection--single .select2-selection__arrow {
     background-color: #ddd;
     border: none;
@@ -434,43 +456,13 @@
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFEEEEEE', endColorstr='#FFCCCCCC', GradientType=0)
 }
 
-.select2-container--classic .select2-selection--single .select2-selection__arrow b {
-    border-color: #888 transparent transparent;
-    border-style: solid;
-    border-width: 7px 4px 0;
-    height: 0;
-    left: 50%;
-    margin-left: 2px;
-    margin-top: -2px;
-    position: absolute;
-    top: 50%;
-    width: 0
-}
-
+/** Clear **/
 .select2-container--classic[dir=rtl] .select2-selection--single .select2-selection__clear {
     float: left
 }
 
-.select2-container--classic[dir=rtl] .select2-selection--single .select2-selection__arrow {
-    border: none;
-    border-right: 1px solid #aaa;
-    border-radius: 4px 0 0 4px;
-    left: 1px;
-    right: auto
-}
-
 .select2-container--classic.select2-container--open .select2-selection--single {
     border: 1px solid #5897fb
-}
-
-.select2-container--classic.select2-container--open .select2-selection--single .select2-selection__arrow {
-    background: 0 0;
-    border: none
-}
-
-.select2-container--classic.select2-container--open .select2-selection--single .select2-selection__arrow b {
-    border-color: transparent transparent #888;
-    border-width: 0 4px 5px
 }
 
 .select2-container--classic.select2-container--open.select2-container--above .select2-selection--single {
@@ -650,14 +642,6 @@
     padding-left: 0
 }
 
-.select2-container--default .select2-selection--single .select2-selection__arrow {
-    height: 46px
-}
-
-.select2-container--default .select2-selection--single .select2-selection__arrow b {
-    border-color: rgba(0, 0, 0, 1) transparent transparent
-}
-
 .select2-container--open .select2-dropdown--above, .select2-container--open .select2-dropdown--below {
     border: none;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12)
@@ -674,7 +658,7 @@
 }
 
 .field-error.combobox,
-.field-success.combobox{
+.field-success.combobox {
     border: none !important;
     box-shadow: none !important;
 }
@@ -683,10 +667,12 @@
     border-bottom: 1px solid #F44336;
     box-shadow: 0 1px 0 0 #F44336;
 }
+
 .field-success.combobox .select2-selection {
     border-bottom: 1px solid #4CAF50;
     box-shadow: 0 1px 0 0 #4CAF50;
 }
+
 .read-only.combobox .select2-selection {
     border: none !important
 }
@@ -722,10 +708,6 @@
     left: 12px !important
 }
 
-.read-only.combobox .select2-selection__arrow {
-    display: none !important
-}
-
 .read-only .select2-selection__rendered {
     color: #000 !important
 }
@@ -736,14 +718,6 @@ header nav .select2-container--default .select2-selection--single .select2-selec
 
 header nav .select2-container--default .select2-selection--multiple, header nav .select2-container--default .select2-selection--single, header nav .select2-container--default.select2-container--focus .select2-selection--multiple {
     border-bottom: none
-}
-
-header nav .select2-container--default .select2-selection--single .select2-selection__arrow b {
-    border-color: #fff transparent transparent
-}
-
-header nav .select2-container--default.select2-container--open .select2-selection--single .select2-selection__arrow b {
-    border-color: transparent transparent #fff
 }
 
 ul.select2-results__options[aria-multiselectable=true] li.select2-results__option:not([role=group]) {
@@ -846,13 +820,13 @@ ul.select2-results__options[aria-multiselectable=true] li.select2-results__optio
 }
 
 .input-field.outlined.field-error.combobox .select2-selection,
-.input-field.outlined.field-error.combobox .select2-container--open .select2-selection{
+.input-field.outlined.field-error.combobox .select2-container--open .select2-selection {
     border: 2px solid #F44336;
     box-shadow: none;
 }
 
 .input-field.outlined.field-success.combobox .select2-selection,
-.input-field.outlined.field-success.combobox .select2-container--open .select2-selection{
+.input-field.outlined.field-success.combobox .select2-container--open .select2-selection {
     border: 2px solid #4caf50;
     box-shadow: none;
 }
